# OpenWRT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  configure  make
remote-scripts/: CMakeLists.txt  README.md
remote-scripts/src/: client.c  server.c
sms4TV-LE46B650/: CMakeLists.txt  README.md
sms4TV-LE46B650/src/: main.c
usbip-overlay/: CMakeLists.txt  README.md
usbip-overlay/resources/: usbip_2.0+3.16-2_i386.deb
usbip-overlay/src/: base64.c  base64.h  common.c  common.h  indicator-usbip  main.c
